[ADD] Create Window, GLFW Options and Glad

--- a/OpenGLSW/OpenGLSW.vcxproj.filters
+++ b/OpenGLSW/OpenGLSW.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="libs.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
