[ADD] shaderClass implementation

--- a/OpenGLSW/OpenGLSW.vcxproj
+++ b/OpenGLSW/OpenGLSW.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="shaderClass.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs.h" />
