--- a/OpenGLSW/OpenGLSW.vcxproj.filters
+++ b/OpenGLSW/OpenGLSW.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="shaderClass.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs.h">
