--- a/OpenGLSW/OpenGLSW.vcxproj
+++ b/OpenGLSW/OpenGLSW.vcxproj
@@ -150,10 +150,12 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="shaderClass.cpp" />
+    <ClCompile Include="VBO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs.h" />
     <ClInclude Include="shaderClass.h" />
+    <ClInclude Include="VBO.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag" />
