--- a/OpenGLSW/OpenGLSW.vcxproj
+++ b/OpenGLSW/OpenGLSW.vcxproj
@@ -151,6 +151,8 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="shaderClass.cpp" />
+    <ClCompile Include="VAO.cpp" />
+    <ClCompile Include="VAO.h" />
     <ClCompile Include="VBO.cpp" />
   </ItemGroup>
   <ItemGroup>
